# sortr

./: Cargo.toml  README.md
src/: bogo.rs  bubble.rs  heap.rs  insertion.rs  lib.rs  merge.rs
tests/: sort_test.rs
