[package]
name = "sortr"
version = "0.1.2"
authors = ["erinpentecost <erin@pentecost.email>"]
edition = "2018"
publish = true
description = "Sorting algorithm implementations."
readme = "README.md"
repository = "https://github.com/erinpentecost/sortr"
license = "GPL-3.0"
license-file = "LICENSE.md"

[dependencies]
cfg-if = "0.1.10"
rand = {version="0.7.3", optional = true}

[features]
default = ["bogo", "bubble", "heap", "insertion", "merge"]
bogo = ["rand"]
bubble = []
heap = []
insertion = []
merge = []
